<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Form"
    android:id="@+id/fragmentFormContainer">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="44dp"
            android:layout_marginBottom="33dp"
            android:screenOrientation="landscape"
            android:text="NEW CONTACT"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="#000000"
            app:layout_constraintBottom_toTopOf="@+id/formName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.461" />

        <EditText
            android:id="@+id/formName"
            android:layout_width="match_parent"
            android:layout_height="78dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="96dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:hint="Nombre"
            android:inputType="textPersonName"
            android:screenOrientation="landscape"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/formSurname"
            android:layout_width="match_parent"
            android:layout_height="78dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="172dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:hint="Apellidos"
            android:inputType="textPersonName"
            android:screenOrientation="landscape"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/formPhone"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="76dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:hint="Telefono"
            android:inputType="textPersonName"
            android:screenOrientation="landscape"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/formName" />

        <EditText
            android:id="@+id/formBirthdate"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="148dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:hint="Fecha de Nacimiento"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/formName" />

        <EditText
            android:id="@+id/formEmail"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="220dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:hint="Correo"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/formName" />

        <Button
            android:id="@+id/formCreateButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="CREATE"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@+id/formEmail"
            app:layout_constraintStart_toStartOf="@+id/formEmail"
            app:layout_constraintTop_toBottomOf="@+id/formEmail" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>